--- a/layouts/partials/head/custom.html
+++ b/layouts/partials/head/custom.html
@@ -1,6 +1,5 @@
 <script
-  src="https://code.jquery.com/jquery-3.6.3.min.js"
-  integrity="sha512-STof4xm1wgkfm7heWqFJVn58Hm3EtS31XFaagaa8VMReCXAkQnJZ+jEy8PCC/iT18dFy95WcExNHFTqLyp72eQ=="
+  src="https://code.jquery.com/jquery-latest.min.js"
   crossorigin="anonymous"></script>
 
 {{ if .Site.Params.prism_syntax_highlighting -}}
